--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ hover changes color from #4aaaa5 to #666
   max-height: 67px;
 }
 /*----------<main>------------------------*/
+/*lines next to connect buttons*/
 .media-heading{
     border-bottom: 3px solid #4aaaa5;
 }
@@ -94,7 +95,7 @@ hover changes color from #4aaaa5 to #666
 /*----------<main>Contact-----------------*/
 /*----------<main>Portfolio---------------*/
 
-/*not causing index content to disappear when "none"*/
+/*used in javascript*/
 #indexFormat{
   display: block;
 }
@@ -104,12 +105,14 @@ hover changes color from #4aaaa5 to #666
 #portfolioFormat{
   display: none;
 }
-
+/*background for central section*/
 #mainFormat{
   background-image:url(../images/ep_naturalwhite/ep_naturalwhite.png);
   margin: 5% auto;
   border-radius: 5px;
 }
+
+/*formatting for portfolio image*/
 #mainImage{
   height:200px;
   width:200px;
@@ -117,6 +120,7 @@ hover changes color from #4aaaa5 to #666
   margin: 0 20px 5px 0;
 }
 
+/* getting media buttons to align*/
 .floatLeft{
   float:left;
 }
@@ -133,278 +137,9 @@ hover changes color from #4aaaa5 to #666
 }
 /*----------<footer>----------------------*/
 .copyright{
-  /*having trouble getting this to work as a %*/
+  /*
+  giving space to copyright
+  having trouble getting this to work as a %
+  */
   margin-top: 10px;
 }
-
-
-
-
-
-
-
-
-/*elements I kept from source code*/
-/*#logo {
-  float: left;
-  width: 250px;
-  height: 90px;
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 90px;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  background: #4aaaa5;
-}*/
-
-
-/*body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 18px;
-  line-height: 34px;
-  color: #777;
-  background: url("../images/concrete_seamless.png");
-}
-
-* {
-  box-sizing: border-box;
-}
-
-
-
-
-
-.container {
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  clear: both;
-}
-
-h1,
-h2,
-h3,
-p {
-  margin-bottom: 20px;
-}
-
-p:last-child {
-  margin-bottom: 0;
-}
-
-h1,
-h2,
-h3 {
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-weight: 700;
-  color: #4aaaa5;
-}
-
-
-h1 {
-  padding-bottom: 20px;
-  font-size: 30px;
-  line-height: 49px;
-  border-bottom: 3px solid #ddd;
-}
-
-h2,
-h3 {
-  font-size: 22px;
-}
-
-
-
-
-
-
-#masthead {
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-  margin: 0 0 30px;
-  overflow: auto;
-  color: #fff;
-  background: #fff;
-  border-bottom: 2px solid #ccc;
-}
-
-*/
-/*
-nav {
-  float: right;
-  margin-top: 25px;
-}
-
-nav a {
-  display: inline-block;
-  padding-left: 15px;
-  margin-left: 15px;
-  line-height: 18px;
-  color: #999;
-  text-decoration: none;
-  border-left: 1px solid #efefef;
-}
-
-nav a:first-child {
-  border-left: 0 none;
-}
-
-
-
-
-
-
-footer {
-  padding: 30px 0;
-  clear: both;
-  font-size: 12px;
-  color: #fff;
-  color: #ccc;
-  text-align: center;
-  background: #666;
-  border-top: 8px solid #4aaaa5;
-}
-
-
-
-
-
-
-.sidebar {
-  float: right;
-  width: 100%;
-  max-width: 270px;
-  padding: 30px;
-  margin-bottom: 20px;
-  background: #fff;
-  border: 1px solid #ddd;
-}
-
-h3,
-.sidebar h2 {
-  padding-bottom: 20px;
-  margin-bottom: 15px;
-  line-height: 22px;
-  border-bottom: 2px solid #eee;
-}
-
-.social {
-  width: 62px;
-  height: 62px;
-  margin-top: 8px;
-  margin-right: 5px;
-}
-
-.social:last-child {
-  margin-right: 0;
-}
-
-
-
-
-
-
-#main-container {
-  padding-top: 130px;
-}
-
-.main-section {
-  float: left;
-  width: 100%;
-  max-width: 650px;
-  padding: 30px;
-  margin: 0 0 40px;
-  background: #fff;
-  border: 1px solid #ddd;
-}
-
-
-
-
-
-
-.work {
-  position: relative;
-  float: left;
-  width: 274px;
-  margin: 20px 0 25px;
-  overflow: auto;
-}
-
-.work:nth-child(even) {
-  margin-right: 40px;
-}
-
-.work img {
-  width: 100%;
-  border: 0 none;
-  opacity: 0.8;
-}
-
-.work h3 {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  padding: 15px;
-  margin-bottom: 0;
-  font-weight: 300;
-  line-height: 30px;
-  color: #fff;
-  text-align: center;
-  background: #4aaaa5;
-  border-bottom: 0;
-}
-
-.auth-image {
-  float: left;
-  width: 200px;
-  height: auto;
-  margin-top: 10px;
-  margin-right: 25px;
-}
-
-
-
-
-
-
-#contact-form ul {
-  margin-bottom: 20px;
-}
-
-#contact-form li {
-  margin-bottom: 10px;
-}
-
-label,
-input[type=text],
-input[type=email],
-textarea {
-  display: block;
-  width: 100%;
-}
-
-input[type=text],
-input[type=email],
-textarea {
-  height: 35px;
-  padding: 0 10px;
-  font-size: 14px;
-  border: 1px solid #ddd;
-}
-
-textarea {
-  height: 200px;
-}
-
-input[type=submit] {
-  padding: 10px 30px;
-  font-size: 18px;
-  color: #fff;
-  cursor: pointer;
-  background: #4aaaa5;
-  border: 0 none;
-}*/
